--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
 <!doctype html>
-<meta http-equiv="refresh" content="0; url=https://github.com/binnng/binnng.github.io/issues">
+<meta http-equiv="refresh" content="0; url=//github.com/binnng/binnng.github.io/issues">
